<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PasscodeActivity">

    <com.hanks.passcodeview.PasscodeView
        android:id="@+id/passcode_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700"
        app:correctInputTip="@string/passcode_correct"
        app:correctStateColor="@color/teal_700"
        app:firstInputTip="@string/passcode_enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:normalStateColor="@android:color/white"
        app:numberTextColor="@android:color/black"
        app:passcodeViewType="set_passcode"
        app:wrongInputTip="@string/passcode_wrong"
        app:wrongStateColor="@android:color/holo_red_light" />
</androidx.constraintlayout.widget.ConstraintLayout>