<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/teal_700"
    app:cardCornerRadius="@dimen/_8sdp"
    app:contentPadding="@dimen/_8sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lock_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_nav_lock"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/set_passcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lock_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/str_pass_message"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/lock_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/white"
                android:hint="@string/passcode_enter"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/lock_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/str_save"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="@dimen/_8sdp"
                    app:icon="@android:drawable/ic_menu_save"
                    app:iconTint="@color/teal_700"
                    app:strokeColor="@color/white"
                    app:strokeWidth="@dimen/_1sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/lock_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/str_cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="@dimen/_8sdp"
                    app:icon="@android:drawable/ic_menu_close_clear_cancel"
                    app:iconTint="@color/teal_700"
                    app:strokeColor="@color/white"
                    app:strokeWidth="@dimen/_1sdp" />

            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lock_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/off_passcod"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/_8sdp"
            app:icon="@drawable/ic_nav_lock"
            app:iconTint="@color/teal_700"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/_1sdp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>