<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CategoryFragment">

    <HorizontalScrollView
        android:id="@+id/hori_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingHorizontal="@dimen/_8sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/container_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/model_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/cate_viet"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/str_cate_viet"
                android:textColor="@color/text_color_chip_state_list"
                app:chipBackgroundColor="@color/background_color_chip_state_list" />

            <com.google.android.material.chip.Chip
                android:id="@+id/cate_en"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_cate_en"
                android:textColor="@color/text_color_chip_state_list"
                app:chipBackgroundColor="@color/background_color_chip_state_list" />

            <com.google.android.material.chip.Chip
                android:id="@+id/cate_tran"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_cate_tran"
                android:textColor="@color/text_color_chip_state_list"
                app:chipBackgroundColor="@color/background_color_chip_state_list" />

            <com.google.android.material.chip.Chip
                android:id="@+id/cate_ani"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_cate_ani"
                android:textColor="@color/text_color_chip_state_list"
                app:chipBackgroundColor="@color/background_color_chip_state_list" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/container_category"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hori_scroll" />
</androidx.constraintlayout.widget.ConstraintLayout>