<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/teal_700"
    app:cardCornerRadius="@dimen/_8sdp"
    app:contentPadding="@dimen/_8sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dow_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_download"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/purple_700" />

        <TextView
            android:id="@+id/dow_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:text="@string/str_dow_title"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/dow_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dow_icon"
            app:layout_constraintTop_toTopOf="@id/dow_icon" />

        <TextView
            android:id="@+id/dow_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:text="@string/str_dow_message"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dow_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dow_message">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dow_preview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_500"
                android:text="@string/str_short"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_8sdp"
                app:icon="@drawable/ic_preview"
                app:iconTint="@color/teal_700"
                app:strokeColor="@color/white"
                app:strokeWidth="@dimen/_1sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dow_full"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_500"
                android:text="@string/str_full"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_8sdp"
                app:icon="@drawable/ic_play"
                app:iconTint="@color/teal_700"
                app:strokeColor="@color/white"
                app:strokeWidth="@dimen/_1sdp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>