<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragment.VideoFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/container_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_video_new"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="serif"
            android:text="@string/str_chip_new"
            android:textColor="@color/text_color_chip_state_list"
            app:chipBackgroundColor="@color/background_color_chip_state_list" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_video_popular"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/str_chip_popular"
            android:textColor="@color/text_color_chip_state_list"
            app:chipBackgroundColor="@color/background_color_chip_state_list" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_video_rating"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/str_chip_rating"
            android:textColor="@color/text_color_chip_state_list"
            app:chipBackgroundColor="@color/background_color_chip_state_list" />
    </com.google.android.material.chip.ChipGroup>

    <FrameLayout
        android:id="@+id/container_video"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group" />

</androidx.constraintlayout.widget.ConstraintLayout>